[project]
name = "pywaybiller"
version = "0.2.0"
description = "Python client for waybiller.com external API"
authors = [{name = "Thorgate Digital", email = "software@thorgate.eu" }]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/thorgate/pywaybiller.git"
keywords = ["OpenAPI", "OpenAPI-Generator", "pywaybiller"]
include = ["pywaybiller/py.typed"]
requires-python = ">=3.9,<4"
dependencies = [
    "urllib3 (>= 1.25.3,< 3.0.0)",
    "python-dateutil (>=2.8.2)",
    "pydantic (>=2)",
    "typing-extensions (>=4.7.1)"
]

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
tox = "*"
json-stream = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
